<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/statistic"
        android:layout_width="58.2dp"
        android:layout_height="19.7dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35.63dp"
        android:text="@string/statistic"
        android:textAppearance="@style/statistic"
        android:gravity="top"
        />

    <TextView
        android:id="@+id/monday_febr"
        android:layout_width="151dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:text="@string/monday_febr"
        android:textAppearance="@style/monday_febr" />

    <!-- 23:59 -->

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="343.91dp"
        android:layout_height="59.46dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:alpha="0.23"
        android:background="@drawable/rectangle_3" />

    <!-- 23:59 -->
    <TextView
        android:id="@+id/some_id"
        android:layout_width="32dp"
        android:layout_height="14.78dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="51.11dp"
        android:gravity="top"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id" />

    <!-- Group task -->
    <TextView
        android:id="@+id/group_task"
        android:layout_width="70dp"
        android:layout_height="14.78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58.5dp"
        android:text="@string/group_task"
        android:textAppearance="@style/group_task"
        android:gravity="top"
        />

    <!-- Tuesday, March 1, 2022 -->
    <TextView
        android:id="@+id/tuesday_mar"
        android:layout_width="132dp"
        android:layout_height="14dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:gravity="top"
        android:text="@string/tuesday_mar"
        android:textAppearance="@style/tuesday_mar" />

    <!-- Rectangle 30 -->
    <View
        android:id="@+id/rectangle_30"
        android:layout_width="344dp"
        android:layout_height="115dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="120dp"
        android:alpha="0.23"
        android:background="@drawable/rectangle_3" />

    <TextView
        android:id="@+id/software_en"
        android:layout_width="153.83dp"
        android:layout_height="19.7dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="126.41dp"
        android:text="@string/software_en"
        android:textAppearance="@style/software_en"
        android:gravity="top"
        />

    <!-- SSD -->
    <TextView
        android:id="@+id/ssd"
        android:layout_width="22.65dp"
        android:layout_height="14.78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="149.28dp"
        android:text="@string/ssd"
        android:textAppearance="@style/ssd"
        android:gravity="top"
        />

    <!-- Calculus -->
    <TextView
        android:id="@+id/calculus"
        android:layout_width="62.21dp"
        android:layout_height="19.7dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180.59dp"
        android:text="@string/calculus"
        android:textAppearance="@style/calculus"
        android:gravity="top"
        />

    <!-- Task on page 29 -->
    <TextView
        android:id="@+id/task_on_pag"
        android:layout_width="88.92dp"
        android:layout_height="14.78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="80dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="203.46dp"
        android:text="@string/task_on_pag"
        android:textAppearance="@style/task_on_pag"
        android:gravity="top"
        />

    <!-- 15:00 -->
    <TextView
        android:id="@+id/some_id1"
        android:layout_width="30.43dp"
        android:layout_height="14.78dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="141.89dp"
        android:gravity="top"
        android:text="@string/some_id1"
        android:textAppearance="@style/some_id" />

    <!-- 23:59 -->
    <TextView
        android:id="@+id/some_id2"
        android:layout_width="30.43dp"
        android:layout_height="14.78dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196.07dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:gravity="top"
        />

    <!-- Rectangle 27 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_2" />

    <!-- Rectangle 27 -->
    <View
        android:id="@+id/rectangle_28"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle" />



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="80dp"
        android:text="Add Item"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"

        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="344dp"
        android:layout_height="115dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_3"
        android:alpha="0.23"

        >

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"

        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Insert Task"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Today"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="40dp"
        android:textAppearance="@style/monday_febr"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/event_1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="90dp"
        android:layout_marginBottom="5dp"

        />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/university_1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="90dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="5dp"
        android:text="Schedule" />

</RelativeLayout>